# ai-document-extraction

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: .env.example
app/api/: __init__.py  document.py  documents.py  extractions.py
app/core/: __init__.py  config.py  exception_handlers.py  exceptions.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  document.py  enums.py  extraction.py  extraction_record.py
app/repositories/: __init__.py  document_repository.py  extraction_repository.py
app/schemas/: __init__.py  document.py  extraction.py  extraction_record.py
app/services/: __init__.py  document_service.py  extraction_service.py
app/storage/: local.py
